# ArrangementNet

./: .gitattributes  README.md
checkpoint/: cyberverse.ckpt  floorsp.ckpt  structured3d.ckpt
data/cyberverse/: train_scenes.txt  val_scenes.txt
data/cyberverse/evaluation_groundtruth/: dongguan_SongShanHu_D6_F1_layer-00.npy  dongguan_SongShanHu_G1_layer-01.npy  dongguan_SongShanHu_H3_layer-01.npy  dongguan_SongShanHu_L6_layer-01.npy  dongguan_SongShanHu_L6_layer-02.npy  dongguan_SongShanHu_M3_layer-00.npy
data/floorsp/: train_scenes.txt  val_scenes.txt
data/floorsp/evaluation_groundtruth/: 1Kc4s2I4OuEriA-vURDlpH.npy  LlljJo9Y5n4sMGbXZiIApj.npy  Q84yeg2ySarR4yQnzh4Fnl.npy  cXoqqxrGqf2bN5iOoVoorQ.npy  eb-suhbCWyd8yrnT6klaO6.npy  h0_qOoKDaJbYP0UfrDhEIO.npy  il9Hq9DVYrkjR8hFW5Yr_A.npy  ucV0PuyPNJq7nbNbqOUJkM.npy  ux6C2vTM8Zha9KJb-7ZBQj.npy  vZIjhovtYde9e2qUjMzvz3.npy  vpfh-8RNNifMalifMREvG7.npy  wU9uhSrJbvBcJRYtfLk81W.npy  xPLcJ6yTRETURbPaQmwEgL.npy  yT6D0Pbn9I-2b-GwJ9W7JH.npy  yTRZRK0KD5Kix-eTF1SC32.npy  zFTmMzxO9IZW6S-iYHwCsN.npy
data/structured3d/: train_scenes.txt  val_scenes.txt
data/structured3d/evaluation_groundtruth/: scene_00006.npy  scene_00009.npy  scene_00012.npy  scene_00022.npy  scene_00031.npy  scene_00037.npy  scene_00042.npy  scene_00053.npy  scene_00058.npy  scene_00069.npy  scene_00079.npy  scene_00119.npy  scene_00139.npy  scene_00162.npy  scene_00163.npy  scene_00164.npy  scene_00181.npy  (+6 more)
evaluation/: evaluations.py  utils.py
src/: dataset.py  model.py  train.py
src/gco/: CMakeLists.txt  main.cpp
src/gco/gco/: GCoptimization.h
(+418 files in other folders)
